# tensorflow

tensorflow/: .clang-format
tensorflow/esp_libs/: cfg_conv2d.h  cfg_gemm.h  cfg_tf_add3.h  cfg_tf_mult3.h  cfg_tf_sub3.h  conv2d_helper.h  esp_acc_prints.h  esp_api_include.h  gemm_helper.h  lib_esp.h
tensorflow/lite/: CMakeLists.txt  tflite_with_xnnpack_optional.cc
tensorflow/lite/core/experimental/acceleration/configuration/c/: esp_plugin.cc  esp_plugin.h  esp_plugin_test.cc
tensorflow/lite/core/kernels/: register.cc  register.h
tensorflow/lite/delegates/esp/: BUILD  README.md  esp_delegate.cc  esp_delegate.h  external_delegate_adaptor.cc  external_delegate_test.sh
tensorflow/lite/delegates/hexagon/: hexagon_delegate.cc
tensorflow/lite/delegates/hexagon/builders/: op_builder.cc
tensorflow/lite/delegates/nnapi/: nnapi_delegate.cc
tensorflow/lite/delegates/wolt/: BUILD  wolt_delegate.cc  wolt_delegate.h
tensorflow/lite/delegates/xnnpack/: xnnpack_delegate.cc  xnnpack_delegate.h  xnnpack_delegate_AddSubMul.cc2  xnnpack_delegate_SubgraphInit.cc2
tensorflow/lite/examples/label_image/: CMakeLists.txt  label_image.cc  label_image.h
tensorflow/lite/examples/minimal/: CMakeLists.txt  minimal.cc
tensorflow/lite/experimental/acceleration/configuration/: esp_plugin.cc
tensorflow/lite/kernels/: CMakeLists.txt  conv.cc  cpu_backend_gemm.h  fully_connected.cc  kernel_util.cc
tensorflow/lite/kernels/internal/optimized/: multithreaded_conv.h  optimized_ops.h
tensorflow/lite/kernels/internal/reference/: conv.h  depthwiseconv_float.h  depthwiseconv_uint8.h  fully_connected.h
tensorflow/lite/tools/delegates/: BUILD  delegate_provider.cc  esp_delegate_provider.cc  wolt_delegate_provider.cc  xnnpack_delegate_provider.cc
tensorflow/lite/tools/evaluation/: utils.cc  utils.h
tensorflow/tsl/framework/convolution/: eigen_spatial_convolutions-inl.h
